--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,13 @@
 html,
 body {
-  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  overflow-y: auto;
+  min-height: 100%;
+  line-height: 1.2rem;
+  font-size: 1rem;
+  font-weight: 400;
+  font-family: Roboto, sans-serif !important;
+  color: #212b36;
 }
 
 a {
